fix delete and update media files'